crates/perl-parser/tests/snapshots/ast_snapshot_tests__snapshot_ast_regex_match.snap
---
source: crates/perl-parser/tests/ast_snapshot_tests.rs
expression: "parse_sexp(\"if ($str =~ /^hello/i) { print \\\"matched\\\"; }\")"
---
(source_file (if (match (variable $ str) (regex "/^hello/" "i")) (block (expression_statement (call print ((string_interpolated "\"matched\"")))))))
