crates/perl-parser/tests/snapshots/ast_snapshot_tests__snapshot_errors_missing_rhs.snap
---
source: crates/perl-parser/tests/ast_snapshot_tests.rs
expression: "parse_errors(\"my $x = ;\")"
---
expected expression, found ';' at position 8
expected statement, found ';' at position 8
