crates/perl-parser/tests/snapshots/ast_snapshot_tests__snapshot_errors_multiple_statements_errors.snap
---
source: crates/perl-parser/tests/ast_snapshot_tests.rs
expression: "parse_errors(\"my $x = ;\\nmy $y = ;\")"
---
expected expression, found ';' at position 18
expected expression, found ';' at position 8
expected statement, found ';' at position 18
expected statement, found ';' at position 8
