crates/perl-parser/tests/snapshots/ast_snapshot_tests__snapshot_recovery_broken_regex_then_followup_statement.snap
---
source: crates/perl-parser/tests/ast_snapshot_tests.rs
expression: "parse_sexp(\"if ($text =~ /abc) { print 1; }\\nmy $ok = 1;\")"
---
(source_file (ERROR "expected \'{\', found end of input at position 43"))
