crates/perl-parser/tests/snapshots/ast_snapshot_tests__snapshot_recovery_missing_rhs.snap
---
source: crates/perl-parser/tests/ast_snapshot_tests.rs
expression: "parse_sexp(\"my $x = ;\")"
---
(source_file (ERROR "expected expression, found \';\' at position 8"))
