crates/perl-parser/tests/snapshots/ast_snapshot_tests__snapshot_recovery_statement_after_error.snap
---
source: crates/perl-parser/tests/ast_snapshot_tests.rs
expression: "parse_sexp(\"my $x = ;\\nmy $y = 10;\")"
---
(source_file (ERROR "expected expression, found \';\' at position 8") (my_declaration (variable $ y)(number 10)))
