crates/perl-parser/tests/snapshots/ast_snapshot_tests__snapshot_recovery_truncated_hash.snap
---
source: crates/perl-parser/tests/ast_snapshot_tests.rs
expression: "parse_sexp(\"my %h = (a =>\")"
---
(source_file (ERROR "expected expression, found end of input at position 13"))
