crates/perl-parser/tests/snapshots/ast_snapshot_tests__snapshot_semantic_token_legend_modifiers.snap
---
source: crates/perl-parser/tests/ast_snapshot_tests.rs
expression: mods_str
---
declaration
definition
readonly
static
deprecated
abstract
async
modification
documentation
defaultLibrary
